centering issue on mobile fixed

--- a/portfolio-ali-hosseini/src/portfolio/PlaySync.module.css
+++ b/portfolio-ali-hosseini/src/portfolio/PlaySync.module.css
@@ -139,7 +139,9 @@
         padding-top: 20px;
         align-items: center;
         text-align: center;
-
+    }
+    .description{
+        padding-left: 0px;
     }
 
     .c2{
